Add logs directory to .gitignore and update dependencies